--- a/website/css/main.css
+++ b/website/css/main.css
@@ -115,7 +115,7 @@ LEARN MORE
 
 }
 	#shows{
-		padding-top: 10%;
+		padding-top: 5%;
 		background: #2d2d30;
 	}
 
@@ -125,7 +125,7 @@ Music
 *******************/
 
 #music{
-	padding-top: 10%;
+	padding-top: 5%;
 	background: white;
 }
 .music h2{
@@ -161,7 +161,7 @@ Music
 Contact
 *******************/
 #contact{
-	padding-top: 10%;
+	padding-top: 5%;
 	background: white;
 }
 
@@ -205,7 +205,7 @@ FOOTER
 	.footer{
 		font-family: "Bebas Neue", sans-serif;
 		padding: .7em 0;
-		color: white;
+		color: black;
 	}
 	.nav img {
 		margin: 0 5px 5px 5px;
