--- a/website/css/main.css
+++ b/website/css/main.css
@@ -164,7 +164,8 @@ Music
 Contact
 *******************/
 #contact{
-	padding-top: 16%;
+	padding-top: 25%;
+	padding-bottom: 25%;
 	background: white;
 }
 
