--- a/website/css/main.css
+++ b/website/css/main.css
@@ -165,7 +165,7 @@ Contact
 *******************/
 #contact{
 	padding-top: 25%;
-	padding-bottom: 25%;
+	margin-bottom: 25%;
 	background: white;
 }
 
