--- a/website/css/responsive.css
+++ b/website/css/responsive.css
@@ -76,6 +76,9 @@ Music
 .contact a{
 	font-size: 1em;
 }
+.contact{
+	padding-top: 25%;
+}
 	/******************
 	VIDEO STYLES
 	*******************/
